--- a/src/App.css
+++ b/src/App.css
@@ -77,9 +77,9 @@ body, .app {
 /* search page */
 
 .search-books-bar {
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
-  top: 0;
+  margin-top: 20px;
   left: 0;
   z-index: 5;
   display: flex;
