--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
-html, body, .root {
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Source+Sans+Pro&display=swap");
+
+* {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+html,
+body,
+.root {
   height: 100%;
 }
 
@@ -6,7 +14,8 @@ body {
   line-height: 1.5;
 }
 
-body, .app {
+body,
+.app {
   background: white;
 }
 
@@ -14,14 +23,40 @@ body, .app {
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
-  text-align: center;
+  background: #8ecdb7;
+  text-align: left;
 }
 
 .list-books-title h1 {
-  font-weight: 400;
-  margin: 0;
+  margin-bottom: 0;
+  margin-top: 0;
+  font-family: "Fredoka One", cursive;
+  letter-spacing: 0.07em;
   color: white;
+}
+.nav-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-title {
+  margin: 0 0 0 40px;
+  display: flex;
+  flex-direction: column;
+}
+.nav-subtitle {
+  font-size: 0.9em;
+  margin-bottom: 0;
+  margin-top: -10px;
+  justify-content: center;
+  color: white;
+}
+
+.sprout-logo {
+  margin-top: 0.2em;
+  margin-left: 0.9em;
+  height: 2.3em;
+  width: 2.3em;
 }
 
 .list-books-content {
@@ -31,7 +66,6 @@ body, .app {
 
 .bookshelf {
   padding: 0 10px 20px;
-
 }
 
 @media (min-width: 600px) {
@@ -41,6 +75,7 @@ body, .app {
 }
 
 .bookshelf-title {
+  font-weight: 300;
   border-bottom: 1px solid #dedede;
 }
 
@@ -59,20 +94,22 @@ body, .app {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32;
-  background-image: url('./icons/add.svg');
+  background: #456ab0;
+  background-image: url("./icons/add.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 28px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
   font-size: 0;
   outline: 0;
 }
 
 .open-search button:hover {
-  background-color: rgb(0, 102, 0);
+  background-color: #395993;
 }
-
 
 /* search page */
 
@@ -83,7 +120,7 @@ body, .app {
   left: 0;
   z-index: 5;
   display: flex;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 0 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 0 6px rgba(0, 0, 0, 0.23);
 }
 
 .search-books-input-wrapper {
@@ -105,7 +142,7 @@ body, .app {
   left: 15px;
   width: 50px;
   height: 53px;
-  background-image: url('./icons/arrow-back.svg');
+  background-image: url("./icons/arrow-back.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 28px;
@@ -170,12 +207,12 @@ button:active {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #60ac5d;
-  background-image: url('./icons/arrow-drop-down.svg');
+  background: #456ab0;
+  background-image: url("./icons/arrow-drop-down.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .book-shelf-changer select {
@@ -188,7 +225,7 @@ button:active {
 /* book cover */
 
 .book-cover {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   background: #eee;
 }
 
