--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ input::-webkit-calendar-picker-indicator {
 
 .list-books-title {
   padding: 10px 0;
-  background: #8ecdb7;
+  background: #4baa89;
   text-align: left;
   border-bottom: 1px solid #686868;
 }
@@ -54,6 +54,11 @@ a:-webkit-any-link {
   display: flex;
   flex-direction: column;
 }
+
+.nav-title a {
+  text-decoration: none;
+}
+
 .nav-subtitle {
   font-size: 0.9em;
   margin-bottom: 0;
@@ -96,7 +101,7 @@ a:-webkit-any-link {
 
 .tool-tip span {
   font-family: "Fredoka One", cursive;
-  color: #8ecdb7;
+  color: #4baa89;
 }
 
 .list-books-content {
@@ -162,15 +167,17 @@ a:-webkit-any-link {
 
 .search-books-input-wrapper {
   flex: 1;
-  background: #e9e;
+  background: white;
 }
 
 .search-books-bar input {
   width: 100%;
+  height: 100%;
   padding: 15px 10px;
   font-size: 1.25em;
   border: none;
   outline: none;
+  -webkit-appearance: none; /* add this */
 }
 
 .close-search {
@@ -203,9 +210,12 @@ button:active {
   z-index: 6;
   color: black;
   background-color: rgba(255, 255, 255, 0.938);
+  border: 1px solid black;
   padding: 20px;
   margin-top: 5px;
   margin-right: 20px;
+  height: 70px;
+  overflow-y: scroll;
 }
 .datalist-term {
   display: inline-block;
@@ -262,7 +272,7 @@ button:active {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #456ab0;
+  background: #8ecdb7;
   background-image: url("./icons/leaf-4899.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -288,4 +298,36 @@ button:active {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
+}
+
+@media (max-width: 600px) {
+  .nav-title {
+    margin: 0 0 0 1em;
+  }
+
+  .nav-title a h1 {
+    font-size: 1.8em;
+  }
+
+  .nav-subtitle {
+    font-size: 0.7em;
+  }
+
+  .sprout-logo {
+    height: 1.8em;
+    width: 1.8em;
+    margin-top: 0.3em;
+    margin-left: 0.3em;
+  }
+  .question-icon-container {
+    position: absolute;
+    right: 13px;
+  }
+  .question-icon {
+    font-size: 1.5em;
+    color: white;
+  }
+  .search-datalist {
+    margin-right: 10px;
+  }
 }
